add strings in commonui

--- a/Imp/StoreManagement/CommonUI/CommonUI.csproj
+++ b/Imp/StoreManagement/CommonUI/CommonUI.csproj
@@ -8,4 +8,34 @@
 		<OutputPath>..\..\..\..\Bin\</OutputPath>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <EmbeddedResource Update="InventoryVoucher.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="InventoryVoucherItem.Strings.en-us.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="InventoryVoucherItem.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Links.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Messages.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Part.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Store.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Unit.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Views.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
+	</ItemGroup>
+
 </Project>
