change StoreKeeper to Detail Entity, Add Links an Actions

--- a/Imp/StoreManagement/CommonUI/CommonUI.csproj
+++ b/Imp/StoreManagement/CommonUI/CommonUI.csproj
@@ -18,6 +18,9 @@
 	  <EmbeddedResource Update="InventoryVoucherItem.Strings.resx">
 	    <Generator></Generator>
 	  </EmbeddedResource>
+	  <EmbeddedResource Update="Labels_Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
 	  <EmbeddedResource Update="Links.Strings.resx">
 	    <Generator></Generator>
 	  </EmbeddedResource>
