replace new scripts, complete projection columns, complete translations, add securities.

--- a/Imp/StoreManagement/CommonUI/CommonUI.csproj
+++ b/Imp/StoreManagement/CommonUI/CommonUI.csproj
@@ -24,6 +24,9 @@
 	  <EmbeddedResource Update="Links.Strings.resx">
 	    <Generator></Generator>
 	  </EmbeddedResource>
+	  <EmbeddedResource Update="LogicalResources.Strings.resx">
+	    <Generator></Generator>
+	  </EmbeddedResource>
 	  <EmbeddedResource Update="Messages.Strings.resx">
 	    <Generator></Generator>
 	  </EmbeddedResource>
