--- a/Imp/StoreManagement/Web/Web.csproj
+++ b/Imp/StoreManagement/Web/Web.csproj
@@ -12,10 +12,13 @@
 	  <None Remove="StorePages\Edit.js" />
 	</ItemGroup>
 
-
 	<ItemGroup>
+		<EmbeddedResource Include="Dialog\PartSelectionDialog.aspx" />
+		<EmbeddedResource Include="Icons\AddMultiple.png" />
+		<EmbeddedResource Include="Icons\List.gif" />
 		<EmbeddedResource Include="StorePages\EditStore.cs" />
 		<EmbeddedResource Include="PartPages\EditPart.cs" />
+		<EmbeddedResource Include="StorePages\Edit.js" />
 	</ItemGroup>
 
 
