--- a/Imp/StoreManagement/Web/Web.csproj
+++ b/Imp/StoreManagement/Web/Web.csproj
@@ -34,6 +34,9 @@
 		<Reference Include="SystemGroup.Framework">
 			<HintPath>$(OutputPath)\SystemGroup.Framework.dll</HintPath>
 		</Reference>
+		<Reference Include="SystemGroup.General.PartyManagement.Common">
+		  <HintPath>..\..\..\..\Bin\SystemGroup.General.PartyManagement.Common.dll</HintPath>
+		</Reference>
 		<Reference Include="SystemGroup.Training.StoreManagement.Common">
 			<HintPath>$(OutputPath)\SystemGroup.Training.StoreManagement.Common.dll</HintPath>
 		</Reference>
