--- a/Imp/StoreManagement/Common/Common.csproj
+++ b/Imp/StoreManagement/Common/Common.csproj
@@ -25,6 +25,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="ComponentMessage.cmc">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	    <Generator>SgComponentInitGenerator</Generator>
+	    <LastGenOutput>ComponentMessage.designer.cs</LastGenOutput>
+	  </None>
 	  <None Update="DataModel.dbml">
 	    <Generator>SgLinqToSQLGenerator</Generator>
 	    <LastGenOutput>DataModel.designer.cs</LastGenOutput>
@@ -40,6 +45,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="ComponentMessage.designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>ComponentMessage.cmc</DependentUpon>
+	  </Compile>
 	  <Compile Update="DataModel.designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
