--- a/Imp/StoreManagement/Web/Web.csproj
+++ b/Imp/StoreManagement/Web/Web.csproj
@@ -9,6 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Dialog\PartSelectionDialog.ascx" />
 	  <None Remove="Extension\StoreKeeperExtension.ascx" />
 	  <None Remove="InventoryVoucherPages\Edit.js" />
 	</ItemGroup>
