--- a/Imp/Pricing/Web/Web.csproj
+++ b/Imp/Pricing/Web/Web.csproj
@@ -8,6 +8,12 @@
 		<OutputPath>..\..\..\..\Bin\</OutputPath>
 	</PropertyGroup>
 
+
+  	<ItemGroup>
+  	  <EmbeddedResource Include="InventoryVoucherPricingPages\Edit.aspx" />
+  	  <EmbeddedResource Include="InventoryVoucherPricingPages\Edit.js" />
+  	</ItemGroup>
+
 	<ItemGroup>
 		<Reference Include="System.Data.Linq">
 			<HintPath>$(OutputPath)\System.Data.Linq.dll</HintPath>
@@ -25,6 +31,23 @@
 		<Reference Include="Telerik.Web.UI">
 			<HintPath>$(OutputPath)\Telerik.Web.UI.dll</HintPath>
 		</Reference>
+
+		<Reference Include="SystemGroup.Training.StoreManagement.Web">
+			<HintPath>$(OutputPath)\SystemGroup.Training.StoreManagement.Web.dll</HintPath>
+		</Reference>
+
+		<Reference Include="SystemGroup.Training.StoreManagement.Common">
+			<HintPath>$(OutputPath)\SystemGroup.Training.StoreManagement.Common.dll</HintPath>
+		</Reference>
+		
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<Reference Include="System.ServiceModel" />
+		<Reference Include="System.ServiceModel.Web" />
+		<Reference Include="System.Web" />
+		<Reference Include="System.Web.Extensions" />
 	</ItemGroup>
 	
 </Project>
