--- a/Imp/StoreManagement/Web/Web.csproj
+++ b/Imp/StoreManagement/Web/Web.csproj
@@ -17,7 +17,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="Dialog\PartSelectionDialog.aspx" />
 		<EmbeddedResource Include="Icons\AddMultiple.png" />
 		<EmbeddedResource Include="Icons\List.gif" />
 		<EmbeddedResource Include="InventoryVoucherPages\Edit.js" />
@@ -65,6 +64,10 @@
 		<Reference Include="System.ServiceModel.Web" />
 		<Reference Include="System.Web" />
 		<Reference Include="System.Web.Extensions" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Dialog\PartSelectionDialog.ascx" />
 	</ItemGroup>
 
 
